...
              headerShown: false,
            }}
          />
          <Stack.Screen
            name="logs"
            options={{
              title: 'My Logs',
              presentation: 'modal',
            }}
          />
          <Stack.Screen
            name="settings"
            options={{
...
